# my_ringmaster

./: .gitignore  configure.ac
mpd/: chunk-stream0-00001.m4s  stream.mpd
src/app/: Makefile.am  audio_encoder.cc.old  audio_encoder.hh.old  crop_receiver  crop_receiver.cc  crop_sender  crop_sender.cc  decoder.cc  decoder.cc.old  decoder.hh  encoder.cc  encoder.cc.old  encoder.hh  protocol.cc  protocol.hh  receiver  receiver.cc  sender  sender.cc  sender.cc.old  sp_decoder.cc  sp_decoder.hh  sp_encoder.cc  sp_encoder.hh  tile_receiver  tile_receiver.cc  tile_sender  tile_sender.cc  udp_receiver  udp_receiver.cc  udp_sender  udp_sender.cc  video_decoder.cc  video_decoder.hh  video_encoder.cc  video_encoder.hh  video_receiver.cc  video_receiver.cc.old  video_sender.cc  video_sender.cc.old  (+4 more)
src/audio/: Makefile.am  opus_wrapper.cc  opus_wrapper.hh  tester  tester.cc
src/http/: client  http_client.cc  http_server.cc  server
src/plot/: plot.py
src/result/: dec.txt  enc.txt
src/util/: serialization.hh
src/video/: Makefile.am  image.cc  image.hh
